--- a/contato.html
+++ b/contato.html
@@ -33,13 +33,13 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 nav-underline">
                             <li class="nav-item">
-                                <a class="nav-link active mx-lg-2" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link mx-lg-2"  href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="sobre.html">Quem somos: </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="contato.html">Contate-nos </a>
+                                <a class="nav-link active mx-lg-2" aria-current="page" href="contato.html">Contate-nos </a>
                             </li>
                     </div>
                 </div>
