--- a/sobre.html
+++ b/sobre.html
@@ -46,6 +46,103 @@
                 <a href="#"><img id="Logo" src="imagens/RECEITAS PELO MUNDO.png" alt=""></a>
             </div>
         </nav>
-        <header>
+    </header>
+    <main>
+        <div id="conteudo-moba">
+            <h1 class="central">Integrantes: </h1>
+            <!-- card pizza -->
+            <div class="card">
+                <img src="imagens/" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Massa de pizza</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Massa de Pizza</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card nhoque -->
+            <div class="card">
+                <img src="imagens/Nhoque.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pietro Gimenez</h5>
+                    <p class="card-text">Olá sou Pietro Gimenez e gosto de jogar, meu nivel em inglês é intermediario/avançado e estou cada vez mais tentando ser alguem melhor.
+                    </p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card hamburguer vegano -->
+            <div class="card">
+                <img src="imagens/Hamburguer vegano.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Hamburguer Vegano</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Hamburguer Vegano</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+        </div>
+        <section id="conteudo-tablet">
+            <h1 class="central">Integrantes: </h1>
+            <div class="flex_wrap">
+            <!-- card pizza -->
+            <div class="card">
+                <img src="imagens/Pizza.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Massa de pizza</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Massa de Pizza</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card nhoque -->
+            <div class="card">
+                <img src="imagens/Nhoque.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nhoque</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Nhoque</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card hamburguer vegano -->
+            <div class="card">
+                <img src="imagens/Hamburguer vegano.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Hamburguer Vegano</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Hamburguer Vegano</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+        </div>
+    </main>
+            <footer>
+                <h3 class="central">Links Uteis</h3>
+                <br>
+                <section id="footerLinks" class="d-flex justify-content-around">
+                <a href=""><h5>(19) 99354-1162</h5></a>
+                <a href=""><h5>Receitas deliciosas</h5></a>
+                <a href=""><h5>Receitas Diversas</h5></a>
+                </section>
+                <br>
+                <section id="footerLinks" class="d-flex justify-content-around">
+                <a href=""><h5>Politica de privacidade</h5></a>
+                <a href=""><h5>Termos de uso</h5></a>
+                </section>
+                <br>
+                <hr>
+                <div id="logoFooter"><img src="imagens/RECEITAS PELO MUNDO.png" alt=""></div>
+                <section id="footerLinks" class="d-flex justify-content-around">
+                    <a href=""><h6>Este projeto é desenvolvido em conjunto com a disciplina de Programação Web I da Etec Polivalente de Americana e tem como a finalidade de estudar e aprofundar os conhecimentos em HTML, CSS e JS</h6></a>
+                </section>
+                <br>
+            </footer>
 </body>
 </html>
