--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="#"><img id="Logo" src="imagens/RECEITAS PELO MUNDO.png" alt=""></a>
             </div>
         </nav>
-        <header>
+    </header>
             <main>
                 <!-- div carrousel banner -->
                 <div id="car-banner">
@@ -88,7 +88,7 @@
                                     <img src="imagens/brownie.jpg" class="d-block w-100 , card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Brownie</h5>
-                                        <p class="card-text">Nessa Receita você aprendera a fazer Brownies Cremosos e crocantes</p>
+                                        <p class="card-text">Nessa Receita você aprendera a fazer Brownies irresistíveis</p>
                                         <a href="#" class="btn btn-primary stretched-link">Visite a Receita</a>
                                     </div>
                                 </div>
@@ -209,43 +209,7 @@
                         </div>
                     </div>
                 </div>
-                <section id="conteudo-tablet">
-                    <h1 class="central">Novas Receitas:</h1>
-                    <div class="flex_wrap">
-                    <!-- card pizza -->
-                    <div class="card">
-                        <img src="imagens/Pizza.jpg" class="d-block w-100 , card-img-top"
-                            alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Massa de pizza</h5>
-                            <p class="card-text">Nessa Receita você aprendera a fazer Massa de Pizza</p>
-                            <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
-                            Receita</a>
-                        </div>
-                    </div>
-                    <!-- card nhoque -->
-                    <div class="card">
-                        <img src="imagens/Nhoque.jpg" class="d-block w-100 , card-img-top"
-                            alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Nhoque</h5>
-                            <p class="card-text">Nessa Receita você aprendera a fazer Nhoque</p>
-                            <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
-                            Receita</a>
-                        </div>
-                    </div>
-                    <!-- card hamburguer vegano -->
-                    <div class="card">
-                        <img src="imagens/Hamburguer vegano.jpg" class="d-block w-100 , card-img-top"
-                            alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Hamburguer Vegano</h5>
-                            <p class="card-text">Nessa Receita você aprendera a fazer Hamburguer Vegano</p>
-                            <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
-                            Receita</a>
-                        </div>
-                    </div>
-                </div>
+
                 <h1 class="central">Principais Receitas:</h1>
                 <div class="flex_wrap">
                     <!-- card bolinho de bacalhau -->
