--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                 </div>
-
+                <div id="conteudo-tablet">
                 <h1 class="central">Principais Receitas:</h1>
                 <div class="flex_wrap">
                     <!-- card bolinho de bacalhau -->
@@ -246,7 +246,44 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            <h1 class="central">Receitas mais recentes </h1>
+            <div class="flex_wrap">
+            <!-- card pizza -->
+            <div class="card">
+                <img src="imagens/Pizza.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Massa de pizza</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Massa de Pizza</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card nhoque -->
+            <div class="card">
+                <img src="imagens/Nhoque.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nhoque</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Nhoque
+                    </p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            <!-- card hamburguer vegano -->
+            <div class="card">
+                <img src="imagens/Hamburguer vegano.jpg" class="d-block w-100 , card-img-top"
+                    alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Hamburguer Vegano</h5>
+                    <p class="card-text">Nessa Receita você aprendera a fazer Hamburguer Vegano</p>
+                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
+                    Receita</a>
+                </div>
+            </div>
+            </div>
+                </div>
         </main>
         <footer>
             <h3 class="central">Links Uteis</h3>
