--- a/sobre.html
+++ b/sobre.html
@@ -122,6 +122,7 @@
                 </div>
             </div>
         </div>
+        </section>
     </main>
             <footer>
                 <h3 class="central">Links Uteis</h3>
