--- a/contato.html
+++ b/contato.html
@@ -46,6 +46,26 @@
                 <a href="#"><img id="Logo" src="imagens/RECEITAS PELO MUNDO.png" alt=""></a>
             </div>
         </nav>
-        <header>
+    </header>
+            <main id="cont">
+                <div id="borda_forms">
+                    <div class="caixa">
+                        <div id="entrar_em_contato">
+                            <h1>Entrar em Contato</h1>
+                            <input type="text" placeholder="Nome">
+                            <br>
+
+                            <input type="text" placeholder="Email">
+                            <br>
+
+                            <input type="text" placeholder="Telefone">
+                            <br><br>
+
+                            <a href="">Enviar</a>
+                        </div>
+    
+                    </div>
+                </div>
+            </main>
 </body>
 </html>
