--- a/sobre.html
+++ b/sobre.html
@@ -48,29 +48,25 @@
         </nav>
     </header>
     <main>
-        <div id="conteudo-moba">
+        <div id="conteudo-moba" class="quem">
             <h1 class="central">Integrantes: </h1>
             <!-- card pizza -->
             <div class="card">
-                <img src="imagens/" class="d-block w-100 , card-img-top"
+                <img src="imagens/Pietro gimenez.jpg" class="d-block w-100 , card-img-top"
                     alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Massa de pizza</h5>
-                    <p class="card-text">Nessa Receita você aprendera a fazer Massa de Pizza</p>
-                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
-                    Receita</a>
+                    <h5 class="card-title">Pietro Gimenez</h5>
+                    <p class="card-text">Olá sou Pietro Gimenez e gosto de jogar, meu nivel em inglês é intermediario/avançado e estou cada vez mais tentando ser alguem melhor.</p>
                 </div>
             </div>
             <!-- card nhoque -->
             <div class="card">
-                <img src="imagens/Nhoque.jpg" class="d-block w-100 , card-img-top"
+                <img src="imagens/zago2.jpg" class="d-block w-100 , card-img-top"
                     alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Pietro Gimenez</h5>
-                    <p class="card-text">Olá sou Pietro Gimenez e gosto de jogar, meu nivel em inglês é intermediario/avançado e estou cada vez mais tentando ser alguem melhor.
+                    <h5 class="card-title">Pedro Zago</h5>
+                    <p class="card-text">Aluno do ensino médio, Fatec, 15 anos de idade, nível avançado em inglês e intermediário em espanhol
                     </p>
-                    <a href="esfihacarne.html" class="btn btn-primary stretched-link">Visite a
-                    Receita</a>
                 </div>
             </div>
             <!-- card hamburguer vegano -->
