--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
     </header>
-            <main>
+            <main id="ind">
                 <!-- div carrousel banner -->
                 <div id="car-banner">
                     <!-- carrousel que troca sozinho -->
